--- a/livestream.html
+++ b/livestream.html
@@ -42,12 +42,13 @@
     <div id="container">
       <div class="inner">
 
-        <header>
-          <h1>Critical Mapping and Visualization of Israel’s War on Lebanon: Insights from The Beirut Urban Lab</h1>
-          <h2>Live Stream</h2>
-		<h3>A talk by Dr. Mona Harb, Professor of Urban Studies and Politics, American University of Beirut</h3>
+          <header>
+          <h1>Live Stream on 24 Feb. 13:30-14:30 CET</h1>
+          <h3>Critical Mapping and Visualization of Israel’s War on Lebanon: Insights from The Beirut Urban Lab</h3>
+		<h4>A talk by Dr. Mona Harb, Professor of Urban Studies and Politics, American University of Beirut</h4>
 		<p>This video stream will be available on 24 February., 13:30-14:30 CET</p>
         </header>
+    
     
         <hr>
         <section id="main_content">
