--- a/livestream.html
+++ b/livestream.html
@@ -43,10 +43,11 @@
       <div class="inner">
 
           <header>
-          <h1>Live Stream on 24 Feb. 13:30-14:30 CET</h1>
-          <h3>Critical Mapping and Visualization of Israel’s War on Lebanon: Insights from The Beirut Urban Lab</h3>
+          <h1>Live Stream</h1>
+		  	<h3>This video stream will be available on 24 February., 13:30-14:30 CET</h3>
+          <h4>Critical Mapping and Visualization of Israel’s War on Lebanon: Insights from The Beirut Urban Lab</h4>
 		<h4>A talk by Dr. Mona Harb, Professor of Urban Studies and Politics, American University of Beirut</h4>
-		<p>This video stream will be available on 24 February., 13:30-14:30 CET</p>
+	
         </header>
     
     
