--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <strong>Ciutadella Campus</strong><br />
 <strong>Universitat Pompeu Fabra</strong></p>
 
-<p><strong><em>This event will also be live streamed. Connection information will be displayed here on the day of the talk.</em></strong></p>
+<p><strong><em>Click the video player below to view the live stream starting at 13:30.</em></strong></p>
 
 <script src="https://player.live-video.net/1.7.0/amazon-ivs-player.min.js"></script>
  <video
